Display the bio with correct line spacing

--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -25,3 +25,6 @@
     margin-top: 10px;
   }
 }
+.bio-content{
+  white-space: pre-wrap;
+}
